# t.ly-python-url-shortener-api

./: LICENSE  README.md  pyproject.toml
src/tly_url_shortener/: __init__.py  cli.py  client.py  endpoints.py  exceptions.py
tests/: test_cli.py  test_client.py
