[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "tly-url-shortener-api"
version = "0.1.0"
description = "Python SDK for the T.LY URL Shortener API."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Tim Leland" }
]
keywords = ["tly", "url-shortener", "api", "sdk", "links"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = [
  "requests>=2.31.0"
]

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=8.2.0",
  "ruff>=0.6.0",
  "twine>=5.1.0"
]

[project.urls]
Homepage = "https://t.ly"
Documentation = "https://api.t.ly"

[project.scripts]
tly = "tly_url_shortener.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tly_url_shortener"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
